# SimToolbox

./: .gitignore  .gitmodules  LICENSE  README.md  run.bat
code/: CMakeLists.txt  Main.cpp
code/Utils/: CMakeLists.txt  draw.cpp  draw.h  macros.h  properties.h
code/data_structures/: quadtree.h
code/ext/: CMakeLists.txt
code/ext/include/aMath/: a_math.cpp  a_math.h
code/gui/: CMakeLists.txt  Camera.cpp  Camera.h  Gui.cpp  Gui.h  Window.cpp  Window.h
code/gui/gui_elements/: CMakeLists.txt  Gui_Boids.cpp  Gui_Boids.h  Gui_CollisionShape.cpp  Gui_CollisionShape.h  Gui_ForceField.cpp  Gui_ForceField.h  Gui_ParticleEmitter.cpp  Gui_ParticleEmitter.h  Gui_SimElement.cpp  Gui_SimElement.h
code/physics/: Boids.cpp  Boids.h  CMakeLists.txt  CollisionShape.cpp  CollisionShape.h  ParticleEmitter.cpp  ParticleEmitter.h  PhysicsServer.cpp  PhysicsServer.h
